# sloppy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
.claude/commands/: review-prose.md
.github/workflows/: release.yml
docs/analysis/: ai-agent-skill-paths.md
references/: checks.md  contextual-review.md
src/: checks.rs  config.rs  defaults.toml  detector.rs  lib.rs  main.rs  models.rs  voice.rs
src/slop_detector/: __init__.py  checks.py  cli.py  config.py  detector.py  models.py  voice.py
tests/: cli.rs  conftest.py  test_analyze.py  test_checks.py  test_cli.py  test_config.py  test_voice.py
