[package]
name = "sloppy"
version = "1.0.3"
edition = "2024"
description = "Fast regex-based detection of AI prose tells. No LLM calls, no heavy NLP."
license = "MIT"

[[bin]]
name = "sloppy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
