[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slop-detector"
version = "0.1.0"
description = "Fast regex-based detection of AI prose tells. No LLM calls, no heavy NLP."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
slop-detector = "slop_detector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slop_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
